--- a/www/css/style.css
+++ b/www/css/style.css
@@ -453,10 +453,10 @@
   right: 15%; }
 
 .tab-cancel-btn {
-  font-size: 14px;
+  font-size: 15px;
   color: #333333;
   position: absolute;
-  right: 6px;
+  right: 2%;
   bottom: 12px; }
 
 /*# sourceMappingURL=style.css.map */
