--- a/www/templates/register.html
+++ b/www/templates/register.html
@@ -41,9 +41,9 @@
       <button class="button button-block  button-positive" ng-click="comfirm()">
         注册
       </button>
-      <p class="text">点击 “注册新账号” 即表示您同意并遵守lion<a class="link-text" href="#/userText">用户协议</a>和<a class="link-text" href="#/protocolText">隐私政策</a></p>
+      <p class="text">点击 “注册新账号” 即表示您同意并遵守<a class="link-text" href="#/userText">用户协议</a>和<a class="link-text" href="#/protocolText">隐私政策</a></p>
     </div>
-    
+
   </div>
     <!-- <div class="dm-date-picker" data-dateok="{{dateok}}" okcallback="enabledBook(day)" notokcallback="disabledBook(day)"></div> -->
 </ion-content>
