--- a/www/templates/add.html
+++ b/www/templates/add.html
@@ -1,22 +1,36 @@
 <ion-header-bar align-title="center" class="bar-stable">
-    <div class="h1 title login-title" >添加</div>
+  <div class="h1 title login-title">添加</div>
 </ion-header-bar>
 <ion-view>
-    <ion-content>
-        <div class="blank-h12"></div>
-        <div class="card">
-            <a href="#/tab/addPost" class="subdued">
-                <div class="item item-text-wrap" href="#/tab/addPost">
-                    发帖
-                </div>
-            </a>
+  <ion-content>
+    <div class="blank-h12"></div>
+    <div class="card">
+      <a href="#/tab/addPost" class="subdued">
+        <div class="item item-text-wrap" href="#/tab/addPost">
+          请假管理
         </div>
-        <div class="card">
-            <a href="#/tab/addAct" class="subdued">
-                <div class="item item-text-wrap">
-                    活动
-                </div>
-            </a>
+      </a>
+    </div>
+    <div class="card">
+      <a href="#/tab/addAct" class="subdued">
+        <div class="item item-text-wrap">
+          加班报批
         </div>
-    </ion-content>
+      </a>
+    </div>
+    <div class="card">
+      <a href="#/tab/addAct" class="subdued">
+        <div class="item item-text-wrap">
+          报销审批
+        </div>
+      </a>
+    </div>
+    <div class="card">
+      <a href="#/tab/addAct" class="subdued">
+        <div class="item item-text-wrap">
+          合同审批
+        </div>
+      </a>
+    </div>
+  </ion-content>
 </ion-view>
