--- a/www/templates/index.html
+++ b/www/templates/index.html
@@ -1,12 +1,12 @@
-<ion-slide-box active-slide="myActiveSlide"  style="width: 100%;height: 100%;">
+<ion-slide-box active-slide="myActiveSlide" does-continue="true" style="width: 100%;height: 100%;">
   <ion-slide>
-    <div class="box" style="background-image: url('img/background.jpg');background-size: 100% 100%; width: 100%;height: 100%;"></div>
+    <div class="box" style="background-image: url('../img/background.jpg');background-size: 100% 100%; width: 100%;height: 100%;"></div>
   </ion-slide>
   <ion-slide>
-    <div class="box yellow" style="background-image: url('img/background.jpg');background-size: 100% 100%; width: 100%;height: 100%;"></div>
+    <div class="box" style="background-image: url('../img/background.jpg');background-size: 100% 100%; width: 100%;height: 100%;"></div>
   </ion-slide>
   <ion-slide>
-    <div class="box pink" style="background-image: url('img/background.jpg');background-size: 100% 100%; width: 100%;height: 100%;"></div>
+    <div class="box" style="background-image: url('../img/background.jpg');background-size: 100% 100%; width: 100%;height: 100%;"></div>
   </ion-slide>
 </ion-slide-box>
 <span style="position: absolute;bottom: 13px;left: 0px;width: 50%;text-align: center;color: white;">注册</span>
