--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -8,7 +8,7 @@ navigation history that also transitions its views in and out.
   <ion-tab title="首页" icon-off="ion-home" icon-on="ion-home" href="#/tab/home">
     <ion-nav-view name="tab-home"></ion-nav-view>
   </ion-tab>
-  <ion-tab title="消息" icon-off="ion-chatbubble-working" icon-on="ion-chatbubble-working" href="#/tab/message">
+  <ion-tab title="消息" badge="20" badge-style="badge-assertive" icon-off="ion-chatbubble-working" icon-on="ion-chatbubble-working" href="#/tab/message">
     <ion-nav-view name="tab-message"></ion-nav-view>
   </ion-tab>
 
@@ -18,7 +18,7 @@ navigation history that also transitions its views in and out.
     </ion-nav-view>
   </ion-tab>
 
-  <ion-tab title="朋友圈" icon-off="ion-person-stalker" icon-on="ion-person-stalker" href="#/tab/friend">
+  <ion-tab title="通讯录" icon-off="ion-person-stalker" icon-on="ion-person-stalker" href="#/tab/friend">
     <ion-nav-view name="tab-friend"></ion-nav-view>
   </ion-tab>
   <ion-tab title="我的" icon-off="ion-person" icon-on="ion-person" href="#/tab/mine">
