--- a/www/templates/mine.html
+++ b/www/templates/mine.html
@@ -12,7 +12,7 @@
             </ion-item>
             <a class="item item-icon-left" href="#/tab/mypost">
                 <i class="icon ion-ios-pricetags-outline"></i>
-                我的发帖
+                我的日程
                 <span class="badge badge-positive">100</span>
             </a>
             <a class="item item-icon-left" href="#/tab/myact">
