--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -21,7 +21,7 @@ navigation history that also transitions its views in and out.
   <ion-tab title="通讯录" icon-off="ion-person-stalker" icon-on="ion-person-stalker" href="#/tab/friend">
     <ion-nav-view name="tab-friend"></ion-nav-view>
   </ion-tab>
-  <ion-tab title="我的" icon-off="ion-person" icon-on="ion-person" href="#/tab/mine">
+  <ion-tab title="我" icon-off="ion-person" icon-on="ion-person" href="#/tab/mine">
     <ion-nav-view name="tab-mine"></ion-nav-view>
   </ion-tab>
 
