测试高德地图

--- a/www/templates/add.html
+++ b/www/templates/add.html
@@ -3,7 +3,8 @@
 </ion-header-bar>
 <ion-view>
   <ion-content>
-    <div class="blank-h12"></div>
+    <!-- 卡片布局 -->
+    <!--<div class="blank-h12"></div>
     <div class="card">
       <a href="#/tab/addPost" class="subdued">
         <div class="item item-text-wrap" href="#/tab/addPost">
@@ -31,6 +32,99 @@
           合同审批
         </div>
       </a>
+    </div>-->
+
+    <div class="list card">
+      <h5>&nbsp;更多功能:</h5>
+      <div class="item item-divider">
+        <!-- 栅格布局 -->
+        <div class="row">
+          <div class="col-25 col-center">
+            <div class="card">
+              <a href="#/tab/addPost" class="subdued">
+                <div class="item item-text-wrap text-center" href="#/tab/addPost">
+                  <img src="img/IMG_0240.png" style="width: 100%;height: 100%;margin: auto;display: inline;"/><br/>
+                  签到
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="col-25 col-center">
+            <div class="card">
+              <a href="#/tab/addAct" class="subdued">
+                <div class="item item-text-wrap text-center" href="#/tab/addPost">
+                  <img src="img/IMG_0241.png" style="width: 100%;height: 100%;margin: auto;display: inline;"/><br/>
+                  考勤
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="col-25 col-center">
+            <div class="card">
+              <a href="#/tab/addAct" class="subdued">
+                <div class="item item-text-wrap text-center" href="#/tab/addPost">
+                  <img src="img/IMG_0252.png" style="width: 100%;height: 100%;margin: auto;display: inline;"/><br/>
+                  审批
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="col-25 col-center">
+            <div class="card">
+              <a href="#/tab/addAct" class="subdued">
+                <div class="item item-text-wrap text-center" href="#/tab/addPost">
+                  <img src="img/IMG_0244.png" style="width: 100%;height: 100%;margin: auto;display: inline;"/><br/>
+                  公告
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="item item-divider">
+        <div class="row">
+          <div class="col-25 col-center">
+            <div class="card">
+              <a href="#/tab/addPost" class="subdued">
+                <div class="item item-text-wrap text-center" href="#/tab/addPost">
+                  <img src="img/IMG_0237.png" style="width: 100%;height: 100%;margin: auto;display: inline;"/><br/>
+                  请假
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="col-25 col-center">
+            <div class="card">
+              <a href="#/tab/addAct" class="subdued">
+                <div class="item item-text-wrap text-center" href="#/tab/addPost">
+                  <img src="img/IMG_0239.png" style="width: 100%;height: 100%;margin: auto;display: inline;"/><br/>
+                  加班
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="col-25 col-center">
+            <div class="card">
+              <a href="#/tab/addAct" class="subdued">
+                <div class="item item-text-wrap text-center" href="#/tab/addPost">
+                  <img src="img/IMG_0243.png" style="width: 100%;height: 100%;margin: auto;display: inline;"/><br/>
+                  报销
+                </div>
+              </a>
+            </div>
+          </div>
+          <div class="col-25 col-center">
+            <div class="card">
+              <a href="#/tab/addAct" class="subdued">
+                <div class="item item-text-wrap text-center" href="#/tab/addPost">
+                  <img src="img/IMG_0242.png" style="width: 100%;height: 100%;margin: auto;display: inline;"/><br/>
+                  合同
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </ion-content>
 </ion-view>
