--- a/www/templates/mine.html
+++ b/www/templates/mine.html
@@ -15,6 +15,11 @@
         测试扫码
         <span class="badge badge-positive">100</span>
       </a>
+      <a class="item item-icon-left" href="#/tab/testMap">
+        <i class="icon ion-ios-pricetags-outline"></i>
+        测试地图
+        <span class="badge badge-positive">100</span>
+      </a>
       <a class="item item-icon-left" href="#/tab/mypost">
         <i class="icon ion-ios-pricetags-outline"></i>
         我的日程
