测试高德地图

--- a/www/templates/test/testMap.html
+++ b/www/templates/test/testMap.html
@@ -3,7 +3,11 @@
     <button class="button button-icon ion-ios-arrow-left" ng-click="$ionicGoBack()">
     </button>
   </div>
-  <div class="h1 title login-title" >测试高德地图</div>
+  <div class="h1 title login-title">测试高德地图</div>
+  <div class="buttons">
+    <a class="button login-register" ng-click="getLocation()">获取定位信息
+    </a>
+  </div>
 </ion-header-bar>
 <ion-view>
   <ion-content has-bouncing="true" overflow-scroll="false">
