修改js文件 调整功能

--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -3,9 +3,9 @@
         <button class="button button-icon ion-ios-arrow-left" ng-click="$ionicGoBack()">
         </button>
     </div>
-    <input ng-model="tag" class="tab-search" auto-focus-when="focus" placeholder="请输入搜索关键词" ng-model="searchInput">
+    <input ng-model="tag" class="tab-search" auto-focus-when="focus" placeholder="请输入搜索关键词">
     <!--<i class="icon ion-ios-search tab-search-cur"></i>-->
-    <i ng-hide="tag == ''" class="icon ion-close-circled tab-search-close-cur" ng-click="delete()"></i>
+    <i ng-hide="!tag" class="icon ion-close-circled tab-search-close-cur" ng-click="delete()"></i>
     <a class="tab-cancel-btn" ng-click="search()">搜索</a>
 </ion-header-bar>
 <ion-view>
