--- a/www/templates/addAct.html
+++ b/www/templates/addAct.html
@@ -3,7 +3,7 @@
     <button class="button button-icon ion-ios-arrow-left" ng-click="$ionicGoBack()">
     </button>
   </div>
-  <div class="h1 title login-title" >创建活动</div>
+  <div class="h1 title login-title">创建活动</div>
   <div class="buttons">
     <a class="button login-register" ng-click="add()">
       创建
@@ -13,46 +13,51 @@
 <ion-view>
   <ion-content>
     <div class="list card">
-      <h5>&nbsp;&nbsp;选择标签：</h5>
+      <h5>&nbsp;选择标签：</h5>
       <div class="item" style="padding: 4px;">
-        <div class="row" >
-          <div class="col group-cell-select gact">social</div>
-          <div class="col group-cell-select">扩展</div>
-          <div class="col group-cell-select">野外</div>
-          <div class="col group-cell-select">室内</div>
-          <div class="col group-cell-select">其他</div>
+        <div class="row">
+          <div class="col group-cell-select" ng-class="{gact : lable == '1'}" ng-click="changeLable(1)">social</div>
+          <div class="col group-cell-select" ng-class="{gact : lable == '2'}" ng-click="changeLable(2)">扩展</div>
+          <div class="col group-cell-select" ng-class="{gact : lable == '3'}" ng-click="changeLable(3)">野外</div>
+          <div class="col group-cell-select" ng-class="{gact : lable == '4'}" ng-click="changeLable(4)">室内</div>
+          <div class="col group-cell-select" ng-class="{gact : lable == '5'}" ng-click="changeLable(5)">其他</div>
         </div>
       </div>
       <input class="act-cell-title" type="text" placeholder="活动标题">
       <div class="item act-cell-padding">
-        <span>开始时间</span>
+        <span>开始时间:</span>
         <input type="date" class="act-cell-input">
       </div>
       <div class="item act-cell-padding">
-        <span>结束时间</span>
+        <span>结束时间:</span>
         <input type="date" class="act-cell-input">
       </div>
       <div class="item act-cell-padding">
-        <span>人数</span>
+        <span>人数:</span>
         <input type="text" class="act-cell-input" placeholder="输入活动预计人数">
       </div>
       <div class="item act-cell-padding">
-        <span>费用</span>
+        <span>费用:</span>
         <input type="text" class="act-cell-input" placeholder="输入活动预计费用">
       </div>
       <div class="item act-cell-padding">
-        <span>地点</span>
+        <span>地点:</span>
         <input type="text" class="act-cell-input" placeholder="输入活动地址">
       </div>
-      <textarea style="width: 100%;background-color: whitesmoke" placeholder="这里输入活动介绍内容" cols="30" rows="10"></textarea>
-      <img class="full-image" src="img/ben.png">
-      <h5>&nbsp;&nbsp;插入信息：</h5>
-      <div class="item"style="padding: 4px;">
-        <div class="row" >
-          <div class="col group-cell-select">符号</div>
-          <div class="col group-cell-select">图片</div>
-          <div class="col group-cell-select">表情</div>
-          <div class="col group-cell-select">字体</div>
+      <textarea style="width: 100%;background-color: whitesmoke" placeholder="这里输入活动介绍内容" cols="30"
+                rows="10"></textarea>
+      <!--<img class="full-image" src="img/ben.png">-->
+      <h5>&nbsp;插入信息：</h5>
+      <div class="item" style="padding: 4px;">
+        <div class="row">
+          <div class="col group-cell-select" ng-class="{gact : contentType == '1'}" ng-click="changeContentType(1)">符号
+          </div>
+          <div class="col group-cell-select" ng-class="{gact : contentType == '2'}" ng-click="changeContentType(2)">图片
+          </div>
+          <div class="col group-cell-select" ng-class="{gact : contentType == '3'}" ng-click="changeContentType(3)">表情
+          </div>
+          <div class="col group-cell-select" ng-class="{gact : contentType == '4'}" ng-click="changeContentType(4)">字体
+          </div>
         </div>
       </div>
     </div>
