--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -8,7 +8,7 @@ navigation history that also transitions its views in and out.
   <ion-tab title="首页" icon-off="ion-home" icon-on="ion-home" href="#/tab/home">
     <ion-nav-view name="tab-home"></ion-nav-view>
   </ion-tab>
-  <ion-tab title="消息" badge="20" badge-style="badge-assertive" icon-off="ion-chatbubble-working" icon-on="ion-chatbubble-working" href="#/tab/message">
+  <ion-tab title="消息" badge="badges.num" badge-style="badge-assertive" icon-off="ion-chatbubble-working" icon-on="ion-chatbubble-working" href="#/tab/message">
     <ion-nav-view name="tab-message"></ion-nav-view>
   </ion-tab>
 
