--- a/www/templates/addAct.html
+++ b/www/templates/addAct.html
@@ -23,25 +23,25 @@
           <div class="col group-cell-select" ng-class="{gact : lable == '5'}" ng-click="changeLable(5)">其他</div>
         </div>
       </div>
-      <input class="act-cell-title" type="text" placeholder="活动标题">
+      <input class="act-cell-title" type="text" readonly="readonly" placeholder="活动标题">
       <div class="item act-cell-padding">
-        <span>开始时间:</span>
+        <span>开始时间：</span>
         <input type="date" class="act-cell-input">
       </div>
       <div class="item act-cell-padding">
-        <span>结束时间:</span>
+        <span>结束时间：</span>
         <input type="date" class="act-cell-input">
       </div>
       <div class="item act-cell-padding">
-        <span>人数:</span>
+        <span>人数：</span>
         <input type="text" class="act-cell-input" placeholder="输入活动预计人数">
       </div>
       <div class="item act-cell-padding">
-        <span>费用:</span>
+        <span>费用：</span>
         <input type="text" class="act-cell-input" placeholder="输入活动预计费用">
       </div>
       <div class="item act-cell-padding">
-        <span>地点:</span>
+        <span>地点：</span>
         <input type="text" class="act-cell-input" placeholder="输入活动地址">
       </div>
       <textarea style="width: 100%;background-color: whitesmoke" placeholder="这里输入活动介绍内容" cols="30"
