调整多选项卡样式

--- a/www/templates/add.html
+++ b/www/templates/add.html
@@ -1,8 +1,9 @@
 <ion-header-bar align-title="center" class="bar-stable">
-  <div class="h1 title login-title">添加</div>
+  <div class="h1 title login-title">常用功能</div>
 </ion-header-bar>
 <ion-view>
   <ion-content>
+
     <!-- 卡片布局 -->
     <!--<div class="blank-h12"></div>
     <div class="card">
@@ -35,93 +36,77 @@
     </div>-->
 
     <div class="list card">
-      <h5>&nbsp;更多功能:</h5>
+      <h5>&nbsp;&nbsp;常用功能:</h5>
       <div class="item item-divider">
         <!-- 栅格布局 -->
         <div class="row">
           <div class="col-25 col-center">
-            <div class="card">
-              <a href="#/tab/addPost" class="subdued">
-                <div class="item item-text-wrap text-center" href="#/tab/addPost">
-                  <img src="img/IMG_0240.png" style="width: 100%;height: 100%;margin: auto;display: inline;"/><br/>
-                  签到
-                </div>
-              </a>
-            </div>
+            <a href="#/tab/addPost" class="subdued">
+              <div class="item item-text-wrap text-center" href="#/tab/addPost">
+                <img src="img/IMG_0240.PNG" style="width: 100%;height: 100%;margin: auto;display: inline;"/><br/>
+                <span style="font-family: 微软雅黑;font-size: 14px;font-weight: bold;">签到</span>
+              </div>
+            </a>
           </div>
           <div class="col-25 col-center">
-            <div class="card">
-              <a href="#/tab/addAct" class="subdued">
-                <div class="item item-text-wrap text-center" href="#/tab/addPost">
-                  <img src="img/IMG_0241.png" style="width: 100%;height: 100%;margin: auto;display: inline;"/><br/>
-                  考勤
-                </div>
-              </a>
-            </div>
+            <a href="#/tab/addAct" class="subdued">
+              <div class="item item-text-wrap text-center" href="#/tab/addPost">
+                <img src="img/IMG_0241.PNG" style="width: 100%;height: 100%;margin: auto;display: inline;"/><br/>
+                <span style="font-family: 微软雅黑;font-size: 14px;font-weight: bold;">考勤</span>
+              </div>
+            </a>
           </div>
           <div class="col-25 col-center">
-            <div class="card">
-              <a href="#/tab/addAct" class="subdued">
-                <div class="item item-text-wrap text-center" href="#/tab/addPost">
-                  <img src="img/IMG_0252.png" style="width: 100%;height: 100%;margin: auto;display: inline;"/><br/>
-                  审批
-                </div>
-              </a>
-            </div>
+            <a href="#/tab/addAct" class="subdued">
+              <div class="item item-text-wrap text-center" href="#/tab/addPost">
+                <img src="img/IMG_0252.PNG" style="width: 100%;height: 100%;margin: auto;display: inline;"/><br/>
+                <span style="font-family: 微软雅黑;font-size: 14px;font-weight: bold;">审批</span>
+              </div>
+            </a>
           </div>
           <div class="col-25 col-center">
-            <div class="card">
-              <a href="#/tab/addAct" class="subdued">
-                <div class="item item-text-wrap text-center" href="#/tab/addPost">
-                  <img src="img/IMG_0244.png" style="width: 100%;height: 100%;margin: auto;display: inline;"/><br/>
-                  公告
-                </div>
-              </a>
-            </div>
+            <a href="#/tab/addAct" class="subdued">
+              <div class="item item-text-wrap text-center" href="#/tab/addPost">
+                <img src="img/IMG_0244.PNG" style="width: 100%;height: 100%;margin: auto;display: inline;"/><br/>
+                <span style="font-family: 微软雅黑;font-size: 14px;font-weight: bold;">公告</span>
+              </div>
+            </a>
           </div>
         </div>
       </div>
       <div class="item item-divider">
         <div class="row">
           <div class="col-25 col-center">
-            <div class="card">
-              <a href="#/tab/addPost" class="subdued">
-                <div class="item item-text-wrap text-center" href="#/tab/addPost">
-                  <img src="img/IMG_0237.png" style="width: 100%;height: 100%;margin: auto;display: inline;"/><br/>
-                  请假
-                </div>
-              </a>
-            </div>
+            <a href="#/tab/addPost" class="subdued">
+              <div class="item item-text-wrap text-center" href="#/tab/addPost">
+                <img src="img/IMG_0237.PNG" style="width: 100%;height: 100%;margin: auto;display: inline;"/><br/>
+                <span style="font-family: 微软雅黑;font-size: 14px;font-weight: bold;">请假</span>
+              </div>
+            </a>
           </div>
           <div class="col-25 col-center">
-            <div class="card">
-              <a href="#/tab/addAct" class="subdued">
-                <div class="item item-text-wrap text-center" href="#/tab/addPost">
-                  <img src="img/IMG_0239.png" style="width: 100%;height: 100%;margin: auto;display: inline;"/><br/>
-                  加班
-                </div>
-              </a>
-            </div>
+            <a href="#/tab/addAct" class="subdued">
+              <div class="item item-text-wrap text-center" href="#/tab/addPost">
+                <img src="img/IMG_0239.PNG" style="width: 100%;height: 100%;margin: auto;display: inline;"/><br/>
+                <span style="font-family: 微软雅黑;font-size: 14px;font-weight: bold;">加班</span>
+              </div>
+            </a>
           </div>
           <div class="col-25 col-center">
-            <div class="card">
-              <a href="#/tab/addAct" class="subdued">
-                <div class="item item-text-wrap text-center" href="#/tab/addPost">
-                  <img src="img/IMG_0243.png" style="width: 100%;height: 100%;margin: auto;display: inline;"/><br/>
-                  报销
-                </div>
-              </a>
-            </div>
+            <a href="#/tab/addAct" class="subdued">
+              <div class="item item-text-wrap text-center" href="#/tab/addPost">
+                <img src="img/IMG_0243.PNG" style="width: 100%;height: 100%;margin: auto;display: inline;"/><br/>
+                <span style="font-family: 微软雅黑;font-size: 14px;font-weight: bold;">报销</span>
+              </div>
+            </a>
           </div>
           <div class="col-25 col-center">
-            <div class="card">
-              <a href="#/tab/addAct" class="subdued">
-                <div class="item item-text-wrap text-center" href="#/tab/addPost">
-                  <img src="img/IMG_0242.png" style="width: 100%;height: 100%;margin: auto;display: inline;"/><br/>
-                  合同
-                </div>
-              </a>
-            </div>
+            <a href="#/tab/addAct" class="subdued">
+              <div class="item item-text-wrap text-center" href="#/tab/addPost">
+                <img src="img/IMG_0242.PNG" style="width: 100%;height: 100%;margin: auto;display: inline;"/><br/>
+                <span style="font-family: 微软雅黑;font-size: 14px;font-weight: bold;">合同</span>
+              </div>
+            </a>
           </div>
         </div>
       </div>
